[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/balloon.png" type="Texture" id=1]
[ext_resource path="res://balloon3.gd" type="Script" id=2]
[ext_resource path="res://assets/music/piano-romantisme.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/music/endings.mp3" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 1.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 1.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 1.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 1.0
height = 2.0

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 1.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 1.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 1.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 1.0
height = 2.0

[node name="BalloonString" type="RigidBody2D"]
mass = 0.01
gravity_scale = 0.01
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Balloon" type="RigidBody2D" parent="."]
position = Vector2( 0, -20 )
collision_layer = 128
collision_mask = 137
mass = 0.01
physics_material_override = SubResource( 2 )
gravity_scale = -1.5
linear_damp = 2.0

[node name="Sprite" type="Sprite" parent="Balloon"]
position = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balloon"]
shape = SubResource( 3 )

[node name="NeckPos" type="Position2D" parent="Balloon"]
position = Vector2( 0, 5 )

[node name="DampedSpringJoint2D" type="DampedSpringJoint2D" parent="."]
visible = false
rotation = -3.14159
node_a = NodePath("..")
length = 15.0
rest_length = 15.0

[node name="StringLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, -15 )
width = 1.0
default_color = Color( 0.411765, 0.415686, 0.415686, 1 )

[node name="StringPiece0" type="RigidBody2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece0"]
shape = SubResource( 4 )

[node name="StringPin0" type="PinJoint2D" parent="."]
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("..")
node_b = NodePath("../StringPiece0")

[node name="StringPiece1" type="RigidBody2D" parent="."]
position = Vector2( 0, -3 )
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece1"]
shape = SubResource( 5 )

[node name="StringPin1" type="PinJoint2D" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece0")
node_b = NodePath("../StringPiece1")

[node name="StringPiece2" type="RigidBody2D" parent="."]
position = Vector2( 0, -5 )
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece2"]
shape = SubResource( 6 )

[node name="StringPin2" type="PinJoint2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece1")
node_b = NodePath("../StringPiece2")

[node name="StringPiece3" type="RigidBody2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece3"]
shape = SubResource( 7 )

[node name="PlayerSensor" type="Area2D" parent="StringPiece3"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece3/PlayerSensor"]
shape = SubResource( 8 )

[node name="StringPin3" type="PinJoint2D" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece2")
node_b = NodePath("../StringPiece3")

[node name="StringPiece4" type="RigidBody2D" parent="."]
position = Vector2( 0, -9 )
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece4"]
shape = SubResource( 9 )

[node name="StringPin4" type="PinJoint2D" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece3")
node_b = NodePath("../StringPiece4")

[node name="StringPiece5" type="RigidBody2D" parent="."]
position = Vector2( 0, -11 )
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece5"]
shape = SubResource( 10 )

[node name="StringPin5" type="PinJoint2D" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece4")
node_b = NodePath("../StringPiece5")

[node name="StringPiece6" type="RigidBody2D" parent="."]
position = Vector2( 0, -13 )
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece6"]
shape = SubResource( 11 )

[node name="StringPin6" type="PinJoint2D" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece5")
node_b = NodePath("../StringPiece6")

[node name="StringPiece7" type="RigidBody2D" parent="."]
position = Vector2( 0, -15 )
rotation = 0.261799
collision_layer = 0
collision_mask = 0
mass = 0.01
gravity_scale = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="StringPiece7"]
shape = SubResource( 12 )

[node name="StringPin7" type="PinJoint2D" parent="."]
position = Vector2( 0, -14 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece6")
node_b = NodePath("../StringPiece7")

[node name="StringPin8" type="PinJoint2D" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../StringPiece7")
node_b = NodePath("../Balloon")

[node name="StringHandle" type="PinJoint2D" parent="."]
visible = false
node_a = NodePath("..")

[node name="StringHandleElastic" type="DampedSpringJoint2D" parent="."]
visible = false
node_a = NodePath("..")
length = 10.0

[node name="HappyMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="SadMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[connection signal="body_entered" from="StringPiece3/PlayerSensor" to="." method="_on_PlayerSensor_body_entered"]
